# noos-deploy-orb

./: .gitignore  CHANGELOG.md  README.md
.circleci/: config.yml  test-deploy.yml
.github/: CODEOWNERS
.github/workflows/: pr_agent.yml  pr_agent_template.yml
fixtures/docker/: Dockerfile
fixtures/helm/: Chart.yaml  values.yaml
fixtures/helm/templates/: deployment.yml
fixtures/py/: Pipfile
fixtures/python/: .gitignore  Pipfile  pyproject.toml  setup.py
fixtures/python/pipenv/: .gitignore  Pipfile  pyproject.toml
fixtures/python/src/noos_test/: __init__.py
fixtures/python/src/tests/: test_project.py
fixtures/python/uv/: pyproject.toml
src/: @orb.yml
src/commands/: docker-build-image.yml  docker-configure-repo.yml  docker-install-cli.yml  docker_build_image.yml  docker_buildx_image.yml  docker_configure_repo.yml  docker_install_cli.yml  github_post_comment.yml  helm-build-chart.yml  helm-configure-repo.yml  helm-install-cli.yml  helm-lint-chart.yml  helm_build_chart.yml  helm_configure_repo.yml  helm_install_cli.yml  helm_lint_chart.yml  install-cli.yml  py-install-venv.yml  python-build-wheel.yml  python-configure-venv.yml  python-install-cli.yml  python-install-venv.yml  python-lint-package.yml  python-publish-wheel.yml  python-test-package.yml  python_build_wheel.yml  python_configure_venv.yml  python_lint_package.yml  python_publish_wheel.yml  python_test_package.yml  terraform-install-cli.yml  terraform-run-plan.yml  terraform-update-variable.yml  terraform_run_plan.yml  terraform_update_variable.yml
src/examples/: work-with-docker.yml  work-with-helm.yml  work-with-python.yml  work-with-terraform.yml  work_with_docker.yml  work_with_github.yml  work_with_helm.yml  work_with_python.yml  work_with_terraform.yml
src/executors/: default.yml  postgres.yml  timescale.yml
