[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noos-gateway"
version = "1.0.0"
license = {text = "Proprietary"}
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
include = ["*noos_gateway*"]

[tool.black]
line-length = 99
target_version = ['py311']

[tool.isort]
line_length = 99
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
known_first_party = "noos_test"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
install_types = true
non_interactive = true
incremental = true
warn_unused_configs = false
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_*"
filterwarnings = "error::RuntimeWarning"
pythonpath = ["src"]
junit_family = "xunit2"
addopts = "--junitxml=pytest.xml"

[tool.coverage.run]
source = "python/*"
