[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noos-test"
version = "1.0.0"
license = {text = "Proprietary"}
dynamic = ["readme"]
dependencies = [
    "colorama>=0.4.6",
]
requires-python = ">=3.13"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
include = ["*noos_test*"]

[tool.black]
line-length = 99
target_version = ['py313']

[tool.isort]
line_length = 99
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
known_first_party = "noos_test"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
install_types = true
non_interactive = true
incremental = true
warn_unused_configs = false
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_*"
filterwarnings = "error::RuntimeWarning"
pythonpath = ["src"]
junit_family = "xunit2"
addopts = "--junitxml=pytest.xml"

[tool.coverage.run]
source = "python/*"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.11.1",
    "pydocstyle>=6.3.0",
    "pytest>=8.3.2",
    "build>=1.2.1",
]
